--- a/index.html
+++ b/index.html
@@ -7,364 +7,9 @@
         <script src="vue.js"></script>
     </head>
     <body>
-        <div id="app">
-            <div class="editor-container">
-                <div class="tool-bar">
-                    <div class="tool-box">
-                        <button class="tool" title="修改字体颜色" v-on:click="toggleColor(1)"
-                        v-bind:style="{'color':colorNow}">A</button>
-                        <div v-if="showC" class="tool-detail">
-                            <div class="tab-bar">
-                                <div v-on:click="mode = !mode" v-bind:class="{ active: mode }">选择颜色</div>
-                                <div v-on:click="mode = !mode" v-bind:class="{ active: !mode }">RGB值</div>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="tab-container">
-                                <div class="color-selecter" v-if="mode">
-                                    <button v-bind:style="{'background-color': color}" v-on:click="getColor($event, 1)"
-                                    v-for="color in colorList"> </button>
-                                    <div class="clear"></div>
-                                </div>
-                                <div v-else class="color-rgb">
-                                    <div>
-                                        R: <input type="number" max="255" min="0" step="1" v-model="red" style="width: 3em;"><br>
-                                        G: <input type="number" max="255" min="0" step="1" v-model="green" style="width: 3em;"><br>
-                                        B: <input type="number" max="255" min="0" step="1" v-model="blue" style="width: 3em;">
-                                    </div>
-                                    <div v-bind:style="{width: '120px', height: '2em', 'background-color': rgb}"
-                                    v-on:click="getColor($event, 1)">
-                                    </div>
-                                </div>
-                                <div>
-                                    <button type="button"   v-on:click="setColor(1)">确定</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="修改背景颜色" v-on:click="toggleColor(2)"
-                        v-bind:style="{'background-color': bgcolorNow}">A</button>
-                        <div v-if="showBGC" class="tool-detail">
-                            <div class="tab-bar">
-                                <div v-on:click="mode = !mode" v-bind:class="{ active: mode }">选择颜色</div>
-                                <div v-on:click="mode = !mode" v-bind:class="{ active: !mode }">RGB值</div>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="tab-container">
-                                <div class="color-selecter" v-if="mode">
-                                    <button v-bind:style="{'background-color': color}" v-on:click="getColor($event, 2)" v-for="color in colorList"> </button>
-                                    <div class="clear"></div>
-                                </div>
-                                <div v-else class="color-rgb">
-                                    <div>
-                                        R: <input type="number" max="255" min="0" step="1" v-model="red" style="width: 3em;"><br>
-                                        G: <input type="number" max="255" min="0" step="1" v-model="green" style="width: 3em;"><br>
-                                        B: <input type="number" max="255" min="0" step="1" v-model="blue" style="width: 3em;">
-                                    </div>
-                                    <div v-bind:style="{width: '120px', height: '2em', 'background-color': rgb}"
-                                    v-on:click="getColor($event, 2)">
-                                    </div>
-                                </div>
-                                <div>
-                                    <button type="button"   v-on:click="setColor(2)">确定</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="粗体" v-on:click="toggleBold" style="font-weight: bold">B</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="斜体" v-on:click="toggleOblique" style="font-style:oblique;">I</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="下划线" v-on:click="toggleUdline" style="text-decoration:underline">U</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="增加缩进" v-on:click="addIndent">☞</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="减少缩进" v-on:click="minusIndent">☜</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="对齐方向" v-on:click="showAlign = !showAlign">☰</button>
-                        <div v-if="showAlign" class="tool-detail">
-                            <ul class="updown-list">
-                                <li><button type="button" v-on:click="setAlign('justify')">两端对齐</button></li>
-                                <li><button type="button" v-on:click="setAlign('center')">居中</button></li>
-                                <li><button type="button" v-on:click="setAlign('left')">左对齐</button></li>
-                                <li><button type="button" v-on:click="setAlign('right')">右对齐</button></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="插入列表" v-on:click="toggleList">·-</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="清除格式" v-on:click="clearStyle">C</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="格式刷" v-on:dblclick="cloneStyle" v-on:click="">刷</button>
-                    </div>
-                    <div class="tool-box">
-                        <button class="tool" title="插入图片" v-on:click="showPhoto = !showPhoto">图</button>
-                        <div v-if="showPhoto" v-if="showPhoto" class="tool-detail">
-                            <div class="photo-set">
-                                <ul>
-                                    <li>url:<input type="text" name="" v-model="photoURL"></li>
-                                    <li>width:<input type="text" name="" v-model="photoWidth"></li>
-                                    <li>height:<input type="text" name="" v-model="photoHeight"></li>
-                                </ul>
-                                <button type="button" name="button" v-on:click="insertPhoto">插入</button>
-                                <img v-bind:style="{'width': photoWidth, 'height': photoHeight}" v-bind:src="photoURL || 'https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo/bd_logo1_31bdc765.png'">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="leftbar"></div>
-                <div class="editor" id="editor" contentEditable="true" v-on:mouseup="pasteStyle">
-
-                </div>
-                <div class="rightbar"></div>
-            </div>
+        <div class="ckEditor">
+            <ck-editor></ck-editor>
         </div>
         <script src="ckedit.js"></script>
-        <script type="text/javascript">
-            var app = new Vue({
-                el: "#app",
-                data: {
-                    red: 0,
-                    green: 0,
-                    blue: 0,
-                    mode: true,
-                    showC: false,
-                    showBGC: false,
-                    showAlign: false,
-                    showPhoto: false,
-                    nlnow: [],
-                    styleNow: "",
-                    stylePaste: false,
-                    photoURL: "",
-                    photoWidth: "100%",
-                    photoHeight: "auto",
-                    colorNow: "red",
-                    bgcolorNow: "red",
-                    STDStyle:{'color': '#000', 'background-color': '#FFF',
-                        'font-weight': 'normal', 'font-style': 'normal',
-                        'text-decoration': 'none', "text-indent": '0',
-                        "text-align": 'left'},
-                    colorList: ['aqua', 'black', 'blue', 'fuchsia', 'gray',
-                    'green', 'lime', 'maroon', 'navy', 'olive', 'orange',
-                    'purple', 'red', 'teal', 'white', 'yellow']
-                },
-                mounted: function(){
-                    var editor = document.getElementById("editor");
-                    if(editor.childNodes.length){
-                        setSelection(editor.childNodes[0]);
-                    }
-                    else{
-                        var p = document.createElement("P");
-                        editor.appendChild(p);
-                        p.innerText = "";
-                        setSelection(p);
-                    }
-                },
-                methods: {
-                    getColor: function(event, mode){
-                        if (mode == 1) {
-                            this.colorNow = event.target.style['background-color'];
-                        }
-                        else if (mode == 2){
-                            this.bgcolorNow = event.target.style['background-color'];
-                        }
-
-                    },
-                    setColor: function(mode){
-                        if (mode == 1){
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style.color = this.colorNow;
-                            }
-                            this.showC = !this.showC;
-                        }
-                        else if (mode == 2){
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style["background-color"] = this.bgcolorNow;
-                            }
-                            this.showBGC = !this.showBGC;
-                        }
-                    },
-                    toggleColor: function(mode){
-                        if(mode == 1){
-                            this.showC = !this.showC;
-                        }
-                        else if (mode == 2) {
-                            this.showBGC = !this.showBGC;
-                        }
-                        if(this.showC || this.showBGC){
-                            this.nlnow = getSelectedElements();
-                        }
-                    },
-                    toggleBold: function(){
-                        this.nlnow = getSelectedElements();
-                        if (this.nlnow[0].style['font-weight'] == "bold"){
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style['font-weight'] = "normal";
-                            }
-                        }
-                        else{
-                            for (var i = 0; i < this.nlnow.length; i++){
-
-                                this.nlnow[i].style['font-weight'] = "bold";
-                            }
-                        }
-                    },
-                    toggleOblique: function(){
-                        this.nlnow = getSelectedElements();
-                        if (this.nlnow[0].style['font-style'] == "oblique"){
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style['font-style'] = "normal";
-                            }
-                        }
-                        else{
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style['font-style'] = "oblique";
-                            }
-                        }
-                    },
-                    toggleUdline: function(){
-                        this.nlnow = getSelectedElements();
-                        if (this.nlnow[0].style['text-decoration'] == "underline"){
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style['text-decoration'] = "none";
-                            }
-                        }
-                        else{
-                            for (var i = 0; i < this.nlnow.length; i++){
-                                this.nlnow[i].style['text-decoration'] = "underline";
-                            }
-                        }
-                    },
-                    toggleList: function(){
-                        this.nlnow = getSelectedPs();
-                        var ul = document.createElement("ul");
-                        this.nlnow[0].parentNode.insertBefore(ul, this.nlnow[0]);
-                        for(var i = 0; i < this.nlnow.length; i++){
-                            if(this.nlnow[i].nodeName == "LI"){
-                                var p = document.createElement("P");
-                                p.innerHTML = this.nlnow[i].innerHTML;
-                                if(this.nlnow[i].parentNode.nextSibling){
-                                    this.nlnow[i].parentNode.parentNode.insertBefore(p, this.nlnow[i].parentNode.nextSibling);
-                                }
-                                else{
-                                    this.nlnow[i].parentNode.parentNode.appendChild(p);
-                                }
-
-                            }
-                            else if (this.nlnow[i].nodeName == "UL") {
-                                var cn = this.nlnow[i].childNodes;
-
-                                for(var j = 0; j < cn.length; j++){
-                                    var p = document.createElement("P");
-                                    p.innerHTML = cn[j].innerHTML;
-                                    this.nlnow[i].parentNode.insertBefore(p, this.nlnow[i]);
-                                }
-                                this.nlnow[i].parentNode.removeChild(this.nlnow[i]);
-                            }
-                            else{
-                                var li = document.createElement('li');
-                                li.innerHTML = this.nlnow[i].innerHTML;
-                                ul.appendChild(li);
-                                this.nlnow[i].parentNode.removeChild(this.nlnow[i]);
-                            }
-
-                        }
-                        if(ul.childNodes.length){
-                            setSelection(ul.childNodes[ul.childNodes.length-1]);
-                        }
-                        else{
-                            setSelection(p);
-                        }
-                    },
-                    addIndent: function(){
-                        this.nlnow = getSelectedPs();
-                        for (var i = 0; i < this.nlnow.length; i++){
-                            if(this.nlnow[i].style["text-indent"]){
-                                var ti = Number(this.nlnow[i].style["text-indent"].slice(0, -2)) + 2;
-                                this.nlnow[i].style["text-indent"] = ti + "em";
-                            }
-                            else{
-                                this.nlnow[i].style["text-indent"] = "2em";
-                            }
-                        }
-                    },
-                    minusIndent: function(){
-                        this.nlnow = getSelectedPs();
-                        for (var i = 0; i < this.nlnow.length; i++){
-                            if(this.nlnow[i].style["text-indent"]){
-                                var ti = Number(this.nlnow[i].style["text-indent"].slice(0, -2)) - 2;
-                                if (ti >= 0) {
-                                    this.nlnow[i].style["text-indent"] = ti + "em";
-                                }
-                            }
-                        }
-                    },
-                    setAlign: function(align){
-                        this.nlnow = getSelectedPs();
-                        for (var i = 0; i < this.nlnow.length; i++){
-                            this.nlnow[i].style["text-align"] = align;
-                        }
-                        this.showAlign = false;
-                    },
-                    clearStyle: function(){
-                        this.nlnow = getSelectedElements();
-                        for(var i = 0; i < this.nlnow.length; i++){
-                            this.nlnow[i].style = this.STDStyle;
-                        }
-                    },
-                    cloneStyle: function(){
-                        var userSelection = getMySelection();
-                        var range = userSelection.getRangeAt(0);
-                        this.styleNow = range.commonAncestorContainer.style;
-                        this.stylePaste = true;
-                    },
-                    pasteStyle: function(){
-                        if(this.stylePaste){
-                            this.nlnow = getSelectedElements();
-                            this.nlnow.concat(getSelectedPs());
-                            for(var i = 0; i < this.nlnow.length; i++){
-                                for(var j = 0; j < this.styleNow.length; j++){
-                                    this.nlnow[i].style[this.styleNow[j]] = this.styleNow[this.styleNow[j]];
-                                }
-                            }
-                            this.stylePaste = false;
-                        }
-                    },
-                    insertPhoto: function(){
-                        var userSelection = getMySelection();
-                        if(userSelection.rangeCount){
-                            var range = userSelection.getRangeAt(0);
-                        }
-                        else{
-                            var range = document.createRange();
-                            var editor = document.getElementById('editor')
-                            range.setStart(editor, 0);
-                            range.collapse(true);
-                        }
-                        var img = document.createElement("img");
-                        img.src = this.photoURL;
-                        img.style.width = this.photoWidth;
-                        img.style.height = this.photoHeight;
-                        range.insertNode(img);
-                    }
-                },
-                computed: {
-                    rgb: function(){
-                        this.colorNow = "rgb("+this.red+","+this.green+","+this.blue+")";
-                        return this.colorNow;
-                    }
-                }
-            })
-        </script>
     </body>
 </html>
